fully redesign home component, re-write its html and css for optimization

--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -1,167 +1,142 @@
-
 <router-outlet></router-outlet>
-  <section class="section main-banner" id="top" data-section="section1">
+<div class = "home-page">
+  <div class="section main-banner">
+    <section data-section="section1"  id="top">
 
-      <img src="../../../../assets/images/courses-video.png" width="100%">
+      <img src="../../../../assets/images/courses-video.png" alt="n" width="100%">
 
-      <div class="video-overlay header-text">
-          <div class="caption">
-              <h6>online Exam Management System</h6>
-              <h2><em>Prepare</em> Yourself</h2>
-              <div class="main-button">
-                  <div class="scroll-to-section"><a href="public-dashboard/login">Log in</a>
-                                                <a href="public-dashboard/register-student">Register</a></div>
-            </div>
+      <div class="main-header">
+        <div class="caption">
+          <h6>online Exam Management System</h6>
+          <h2><em>Prepare</em> Yourself</h2>
+          <div class="main-button">
+            <div class="scroll-to-section"><a href="public-dashboard/login">Log in</a>
+              <a href="public-dashboard/register-student">Register</a></div>
           </div>
+        </div>
       </div>
-  </section>
+    </section>
+  </div>
   <!-- ***** Main Banner Area End ***** -->
 
-  <section class="section why-us" id="section2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="section-heading">
-            <h2>Why You Use Our Online Exam Management System?</h2>
-          </div>
+  <div class="section why-us">
+    <section  id="section2">
+      <div class="why-header">
+        <em class="hl"></em>
+        <div class="question">
+          <h2>Why You Use Our Online Exam Management System?</h2>
         </div>
-        <div class="col-md-12">
-          <div id='tabs'>
-            <ul>
-              <li><a routerLink='/public-dashboard/home/' fragment='tabs-1' >Qualified Teacher's</a></li>
-              <li><a routerLink='/public-dashboard/home/' fragment='tabs-2'>Best Judge Panel</a></li>
-              <li><a routerLink='/public-dashboard/home/' fragment='tabs-3'>Student Friendly Interface</a></li>
-            </ul>
-            <section class='tabs-content'>
-              <article id='tabs-1' >
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/images/choose-us-image-01.jpg" alt="">
-                  </div>
-                  <div class="col-md-6">
-                    <h4>Qualified Teacher's</h4>
-                    <p>You will find here world class top qualified teacher from DU, BUET, JU. They have curiosity.This curiosity leads to an awareness of the challenges facing students in their own communities - especially those communities that are vulnerable in nature.</p>
-                  </div>
+        <div class="options">
+          <ul>
+            <li><a routerLink='/public-dashboard/home/' fragment='tabs-1' >Qualified Teacher's</a></li>
+            <li><a routerLink='/public-dashboard/home/' fragment='tabs-2'>Best Judge Panel</a></li>
+            <li><a routerLink='/public-dashboard/home/' fragment='tabs-3'>Student Friendly Interface</a></li>
+          </ul>
+          <section>
+            <article id="tabs-1">
+              <div class="answer">
+                <div class="related-image">
+                  <img src="assets/images/choose-us-image-01.jpg" alt="">
                 </div>
-              </article>
-              <article id='tabs-2'>
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/images/choose-us-image-02.png" alt="">
-                  </div>
-                  <div class="col-md-6">
-                    <h4>Best Judge Panel</h4>
-                    <p>A best judge pannel can give you the the perfect result.For this reason we use best judge panel. So that you can get best accurate result. <br> Also their have fecility to request for <a href="">re-judge</a> of your result. We think never you use that because we ar perfect.</p>
-                  </div>
+                <div class="content">
+                  <h4>Qualified Teacher's</h4>
+                  <p>You will find here world class top qualified teacher from DU, BUET, JU. They have curiosity.This curiosity leads to an awareness of the challenges facing students in their own communities - especially those communities that are vulnerable in nature.</p>
                 </div>
-              </article>
-              <article id='tabs-3'>
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/images/choose-us-image-03.png" alt="">
-                  </div>
-                  <div class="col-md-6">
-                    <h4>Student Friendly Interface</h4>
-                    <p>Your did not have any tension to learn this system from sketch. It will very friendly environment to learn full of its features. It will offer you very smooth and fast respond feature.</p>
-                  </div>
-                </div>
-              </article>
-            </section>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section video" id="section3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 align-self-center">
-          <div class="left-content">
-            <span></span>
-            <h4>Behind of the project<br><em>Who spend their valuable time</em></h4>
-
-            <br>
-            <div>
-              <img style="float: left; padding:8px;" src="assets/images/nabendu.jpg" alt="" width="100" height="100">
-
-              <h5><a href="https://www.linkedin.com/in/bindanabendu/" target="_blank" rel="noopener noreferrer">Nabendu Bikash Binda</a></h5>
-              <p>Student at Department of CSE, SEU <br> Competitive Programmer<br> Problem Solver</p><br>
-            </div>
-            <div>
-              <img style="float: left; padding:8px;" src="assets/images/sourav.jpg" alt="" width="100" height="100">
-
-              <h5><a href="assets/images/sourav.jpg" target="_blank" rel="noopener noreferrer">Sourav Das</a></h5>
-              <p>Student at Department of CSE, SEU<br>ML Expert</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <article class="video-item">
-            <div class="video-caption">
-              <h4>Friendship Forever</h4>
-            </div>
-            <figure>
-              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img src="assets/images/main-thumb.png"></a>
-            </figure>
-          </article>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section contact" id="section4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="section-heading">
-            <h2>Use This Massage Box to contact with us</h2>
-            <h2>OR</h2>
-            <h2>admins.oems@gmail.com</h2>
-          </div>
-
-        </div>
-        <div class="col-md-6">
-          <form id="contact" action="" method="post">
-            <div class="row">
-              <div class="col-md-6">
-                  <fieldset>
-                    <input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required="">
-                  </fieldset>
-                </div>
-                <div class="col-md-6">
-                  <fieldset>
-                    <input name="email" type="text" class="form-control" id="email" placeholder="Your Email" required="">
-                  </fieldset>
-                </div>
-              <div class="col-md-12">
-                <fieldset>
-                  <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
-                </fieldset>
               </div>
-              <div class="col-md-12">
-                <fieldset>
-                  <button type="submit" id="form-submit" class="button">Send Message Now</button>
-                </fieldset>
+            </article>
+            <article id="tabs-2">
+              <div class="answer">
+                <div class="related-image">
+                  <img src="assets/images/choose-us-image-02.png" alt="">
+                </div>
+                <div class="content">
+                  <h4>Best Judge Panel</h4>
+                  <p>A best judge panel can give you the the perfect result.For this reason we use best judge panel. So that you can get best accurate result. <br> Also their have facility to request for <a href="">re-judge</a> of your result. We think never you use that because we ar perfect.</p>
+                </div>
+              </div>
+            </article>
+            <article id="tabs-3">
+              <div class="answer">
+                <div class="related-image">
+                  <img src="assets/images/choose-us-image-03.png" alt="">
+                </div>
+                <div class="content">
+                  <h4>Student Friendly Interface</h4>
+                  <p>Your did not have any tension to learn this system from sketch. It will very friendly environment to learn full of its features. It will offer you very smooth and fast respond feature.</p>
+                </div>
+              </div>
+            </article>
+          </section>
+        </div>
+      </div>
+
+    </section>
+  </div>
+  <div class="section developer-info">
+    <section  id="section3">
+      <div class="why-header">
+        <em class="hl"></em>
+        <div class="question">
+          <h2>Behind of the project Who spend their valuable time</h2>
+        </div>
+        <div class="developer-details">
+          <div>
+            <div class="developer-details-text">
+              <img src="../../../../assets/images/nabendu.jpg" alt="n" width="100%">
+              <div>
+                <a href="https://www.linkedin.com/in/bindanabendu/" target="_blank" rel="noopener noreferrer">Nabendu Bikash Binda<br></a>
+                <a class = 'website-link' href="https://www.nabendu.info" target="_blank" rel="noopener noreferrer">visit: www.nabendu.info</a>
+                <h5>Student at Department of CSE, SEU<br>Competitive Programmer<br>Problem Solver</h5>
+                <h5>Contribution: FrontEnd and Backend(Database query, connection,<br> security, api security, jwt token, model creation, controller develop<br> and all other things)</h5>
               </div>
             </div>
-          </form>
-        </div>
-        <div class="col-md-6"  >
-          <div id="map" style="color:white;text-align: right;">
-            <h3>Development Language:</h3>
-            <br>
-            <h5>Front End Build with:</h5>
-            <p>Angular, Html, CSS, JavaScript</p>
-            <br>
-            <h5>Backend Built with:</h5>
-            <p>Java, Spring Boot, Thymeleaf, JDBC,<br> JWT, Spring Security, restfull APIs,<br>maintain MVC design pattern</p>
-            <br>
-            <h5>Databases:</h5>
-            <p>MYSQL</p>
+            <div class="developer-details-text">
+              <img src="../../../../assets/images/sourav.jpg" alt="n" width="100%">
+              <div>
+                <a href="assets/images/sourav.jpg" target="_blank" rel="noopener noreferrer">Sourav Das</a>
+                <h5>Student at Department of CSE, SEU<br>ML Expert</h5>
+                <h5>Contribution: FrontEnd</h5>
+              </div>
+            </div>
+            <div class="developer-details-text">
+              <img src="../../../../assets/images/tawhid.JPG" alt="n" width="100%">
+              <div>
+                <a href="" target="_blank" rel="noopener noreferrer">Tawhid Hassan</a>
+                <h5>Student at Department of CSE, SEU<br>Competitive Programmer</h5>
+                <h5>Contribution: Backend Database Query 30%</h5>
+              </div>
+            </div>
+          </div>
+          <div  class="developer-image">
+            <!--            <img src="../../../../assets/images/main-thumb.png" alt="n" width="100%">-->
+            <div class="sub">
+              <h3>Friends Forerver</h3>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
+    </section>
+  </div>
+  <div class="section development-info">
+    <section  id="section4">
+      <div class="why-header">
+        <em class="hl"></em>
+        <div class="question">
+          <h2>Technical Imformation About Online Exam Management System</h2>
+        </div>
+        <h3>Development Language:</h3>
+        <br>
+        <h5>Front End Build with:</h5>
+        <p>Angular, Html, CSS, JavaScript</p>
+        <br>
+        <h5>Backend Built with:</h5>
+        <p>Java, Spring Boot, Thymeleaf, JDBC, JWT, Spring Security, restfull APIs, maintain MVC design pattern</p>
+        <br>
+        <h5>Databases:</h5>
+        <p>MYSQL</p>
+        <h2>--------Contact Info--------</h2>
+        <h5>binda.nabendu@gmail.com<br>me.sourav.das@gmail.com</h5>
+      </div>
+    </section>
+  </div>
+</div>
