--- a/src/app/all-component/public/home/home.component.css
+++ b/src/app/all-component/public/home/home.component.css
@@ -1,168 +1,29 @@
-/*@import url('../../../../assets/vendor/bootstrap/css/bootstrap.min.css');*/
-body {
-    font-family: 'Montserrat', sans-serif;
+.home-page{
+  height: auto;
 }
-
-/* Basic */
-
-a {
-	color: #3CF;
-    text-decoration: none !important;
+a{
+  text-decoration: none;
+  color: #0399FF;
+  cursor: pointer;
 }
-
-a:hover {
-	color: #3CF;
-    text-decoration: none;
-}
-
-ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-p {
-    font-size: 13px;
-    line-height: 22px;
-}
-
-
-.section-heading {
-    text-align: center;
-    margin-bottom: 70px;
-}
-
-.section-heading h2:before {
-    width: 1px;
-    height: 100px;
-    background-color: rgba(250,250,250,0.1);
-    position: absolute;
-    top: -102px;
-    content: '';
-    left: 50%;
-    transform: translate(-50%);
-}
-
-.section-heading h2 {
-    margin-top: 100px;
-    position: relative;
-    font-size: 18px;
-    font-weight: 500;
-    color: #fff;
-    letter-spacing: 0.5px;
-    display: inline-block;
-    padding: 15px 20px;
-    border: 2px solid rgba(250,250,250,0.1);
-}
-
-
-/* Buttons */
-
-.main-button a {
-    background-color: #0399FF;
-    color: #fff;
-    font-size: 13px;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    font-weight: 700;
-    padding: 12px 20px;
-    display: inline-block;
-    margin: 5px;
-    outline: none;
-}
-
-a.menu-link { display: none; }
-
-@media screen and (max-width: 950px) {
-  a.menu-link {
-    float: right;
-    display: block;
-    font-size: 36px;
-    color: #fff;
-    padding-right: 30px;
-    padding-top: 15px;
-  }
-  nav[role="navigation"] {
-    clear: both;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-  }
-  .js nav[role="navigation"] {
-    overflow: hidden;
-    max-height: 0;
-  }
-  nav[role="navigation"].active {
-    max-height: 20em;
-    height: 20em;
-    overflow-y: scroll;
-  }
-  nav[role="navigation"] ul {
-    top: 0;
-    width: 100%;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    border-top: 1px solid rgba(250,250,250,0.25);
-    background-color: rgba(22,34,57,0.99);
-  }
-  nav[role="navigation"] li a {
-    display: block;
-    padding: 15px 0;
-    border-bottom: 1px solid rgba(250,250,250,0.25);
-    text-align: center;
-    color: #fff;
-    font-size: 13px;
-    text-transform: uppercase;
-    font-weight: 700;
-    line-height: 1.5;
-  }
-  nav[role="navigation"] li:hover a,
-  nav[role="navigation"] li.active a {
-      color: #0399FF;
-  }
-
-  @media screen and (min-width: 951px) {
-    .js nav[role="navigation"] {
-      max-height: none;
-    }
-
-    nav[role="navigation"] li {
-      display: inline-block;
-      margin: 0 0.25em;
-    }
-    nav[role="navigation"] li a {
-      border: 0;
-    }
-  }
-}
-
-
-
-
-/* Slider */
-
 .main-banner {
   position: relative;
   max-height: 100%;
   overflow: hidden;
-  margin-bottom: -7px;
 }
-
-.video-overlay {
-    position: absolute;
-    background-color: rgba(22,34,57,0.85);
-    top: 0;
-    left: 0;
-    bottom: 7px;
-    width: 100%;
+.main-header {
+  position: absolute;
+  background-color: rgba(22,34,57,0.85);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  border-bottom: 5px solid #0399FF;
 }
-
 .main-banner .caption {
   text-align: center;
   position: absolute;
+  margin-top: 50px;
   width: 80%;
   left: 50%;
   top: 50%;
@@ -171,17 +32,16 @@ a.menu-link { display: none; }
 
 .main-banner .caption h6 {
   margin-top: 0;
-  font-size: 18px;
+  font-size: 1.8vw;
   text-transform: uppercase;
-  font-weight: 600;
   color: #fff;
   letter-spacing: 1px;
 }
 
 .main-banner .caption h2 {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-size: 64px;
+  margin-top: 4vw;
+  margin-bottom: 4vw;
+  font-size: 5vw;
   text-transform: uppercase;
   font-weight: 800;
   color: #fff;
@@ -193,156 +53,50 @@ a.menu-link { display: none; }
   color: #0399FF;
   font-weight: 900;
 }
-
-@media screen and (max-width: 1180px) {
-
-  .main-banner .caption h6 {
-    font-weight: 500;
-  }
-
-  .main-banner .caption h2 {
-    font-size: 58px;
-  }
-
-}
-@media screen and (max-width: 767px) {
-
-  .main-banner .caption h6 {
-    font-weight: 500;
-  }
-
-  .main-banner .caption h2 {
-    font-size: 36px;
-  }
-
-}
-
-
-/* Features */
-
-section.features .col-4 {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.features-post {
-  position: relative;
-  margin-bottom: 0;
-}
-
-.features-thumb {
-  overflow: hidden;
-  position: relative;
-}
-
-.features-thumb img {
-  width: 100%;
-}
-
-.features-content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: #0c1228;
+.main-button a {
+  text-decoration: none;
+  background-color: #0399FF;
   color: #fff;
-  padding: 40px;
-}
-
-.features-content:hover {
-    background-color: #0399FF;
-    box-shadow: 0 0 30px rgba(0,0,0,0.5);
-}
-
-.features-content h4 {
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #fff;
-    letter-spacing: 1px;
-    margin-bottom: 0;
-}
-
-.features-content h4 i {
-    margin-right: 15px;
-    font-size: 24px;
-}
-
-.features-content p {
-    margin-bottom: 0;
-}
-
-.features-content a {
-  margin-top: 15px;
-  display: inline-block;
+  font-size: 1.5vw;
   text-transform: uppercase;
-  color: #fff;
-  letter-spacing: 0.5px;
-  font-weight: 700;
-  font-size: 14px;
-  border-bottom: 2px solid #fff;
+  letter-spacing: 1px;
+  font-weight: 560;
+  padding: 1vw 1.5vw;
+  display: inline-block;
+  margin: 5px;
+  outline: none;
 }
-
-.features-content p.hidden-sm {
-  display: none;
+.why-us{
+  background-image: url(../../../../assets/images/choosing-bg.jpg);
+  justify-content: center;
 }
-
-.second-features,
-.third-features {
-    border-left: 1px solid rgba(250,250,250,0.1);
+.why-header{
+  background-color: rgba(22,34,57,0.22);
+  width: 100%;
 }
-
-.content-hide {
-  margin-top: 15px;
-  display: none;
-}
-
-.content-hide p {
-  color: #fff;
-}
-
-@media screen and (max-width: 767px) {
-
-  .features-content {
-    padding: 15px;
-  }
-  .features-content h4 i {
-    display: block;
-    margin-bottom: 10px;
-  }
-  .features-content h4 {
-    font-size: 14px;
-  }
-  .features-content p {
-    display: none;
-  }
-  .features-content p.hidden-sm {
-    display: block;
-  }
-  .features-content a {
-    letter-spacing: 0;
-    font-size: 13px;
-    font-weight: 600;
-  }
-
-}
-
-
-
-/* Why Choosing Oems */
-
-section.why-us {
-    background-image: url(../../../../assets/images/choosing-bg.jpg);
-    background-color: #172238;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-bottom: 100px;
-}
-
-#tabs {
+.why-header .question{
   text-align: center;
+  font-size: 2.5vw;
+  color: #fff;
 }
-#tabs ul {
+.why-header .question h2{
+  margin-top: 80px;
+  margin-bottom: 70px;
+  padding: 7px;
+  border: 1px solid rgba(250,250,250,0.3);
+  display: inline-block;
+}
+.hl {
+  width: 1px;
+  height: 80px;
+  margin-bottom: 40px;
+  background-color: rgba(250,250,250,0.3);
+  position: absolute;
+  content: '';
+  left: 50%;
+  transform: translate(-50%);
+}
+.why-us ul {
   margin: 0;
   padding: 0;
   -webkit-column-count: 3;
@@ -351,325 +105,119 @@ section.why-us {
   -webkit-column-gap: 0;
   -moz-column-gap: 0;
   column-gap: 0;
-}
-#tabs ul::after {
-  clear: both;
-  content: "";
-  display: table;
-}
-#tabs ul li {
-  display: block;
-  font-weight: 400;
-  font-size: 1.2em;
-  letter-spacing: 1px;
+  list-style: none;
   text-align: center;
 }
-#tabs ul li a {
-  display: block;
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: 1px;
-  cursor: pointer;
-  outline: 0;
-  padding-bottom: 30px;
-  color: #fff;
+.why-us ul a{
   text-decoration: none;
-  text-transform: uppercase;
-  position: relative;
-}
-#tabs ul li a:after {
-    transition: all 0.3s;
-    width: 10px;
-    height: 10px;
-    background-color: #fff;
-    content: '';
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    bottom: 0;
-}
-#tabs ul li a:before {
-    transition: all 0.3s;
-    width: 25px;
-    height: 25px;
-    border: 2px solid transparent;
-    background-color: transparent;
-    content: '';
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    bottom: -5px;
-}
-#tabs ul li span {
-  display: block;
-  margin-bottom: 0.75em;
-}
-#tabs ul .ui-tabs-active {
-}
-#tabs ul .ui-tabs-active a {
-  color: #0399FF;
-}
-#tabs ul .ui-tabs-active a:after {
-  background-color: #0399FF;
-  width: 15px;
-  height: 15px;
-}
-#tabs ul .ui-tabs-active a:before {
-  border-color: #0399FF;
-}
-#tabs h4 {
-    margin-top: 60px;
-    font-size: 32px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    color: #fff;
-    margin-bottom: 30px;
-}
-
-#tabs p {
-    color: #fff;
-    font-size: 15px;
-    line-height: 28px;
-}
-
-.tabs-content {
-    margin-top: 20px;
-    text-align: left;
-
-}
-@media screen and (max-width: 767px) {
-
-  .tabs-content {
-      text-align: center;
-  }
-
-}
-
-.tabs-content img {
-    width: 100%;
-    overflow: hidden;
-    padding-right: 45px;
-    padding-top: 100px;
-}
-
-.tabs-content h4 {
-  padding-top: 60px;
-}
-
-@media screen and (max-width: 767px) {
-
-  .tabs-content img {
-      padding-right: 0;
-  }
-
-}
-
-/* Video */
-
-section.video {
-    background-image: url(../../../../assets/images/power-of-friend.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #172238;
-    padding: 120px 0;
-}
-
-section.video .left-content {
   color: #fff;
 }
-
-section.video .left-content span {
-  text-transform: uppercase;
+.options{
+  justify-content: center;
+}
+.answer{
+  display: flex;
+  align-items: center;
+}
+.answer .related-image{
+  max-width: 50%;
+  margin: 40px;
+}
+.answer .related-image img{
+  width: 100%;
+}
+.answer .content{
+  max-width: 50%;
+  margin: 40px;
+}
+.answer .content h4 {
+  margin-top: 60px;
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #fff;
+  margin-bottom: 30px;
+}
+.answer .content p {
+  color: #fff;
+  font-size: 15px;
+  line-height: 28px;
+}
+.developer-info{
+  background-image: url(../../../../assets/images/power-of-friend.jpg);
+  justify-content: center;
+}
+.developer-info .developer-details{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.developer-info .developer-details a{
+  font-size: 30px;
+}
+.developer-info .developer-details .website-link{
+  font-size: 15px;
+  color: #e0a800;
+}
+.developer-info .developer-details .developer-details-text{
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.developer-info .developer-details .developer-details-text img{
+  width: 80px;
+  height: 80px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.developer-info .developer-details .developer-details-text h3{
+  color: #0399FF;
+  font-size: 30px;
+}
+.developer-info .developer-details .developer-details-text h5{
+  color: #fff;
   font-size: 14px;
-  letter-spacing: 0.5px;
 }
-
-section.video .left-content h4 {
-    margin-top: 20px;
-    font-size: 30px;
-    color: #fff;
-    font-weight: 800;
-    letter-spacing: 0.5px;
-    line-height: 40px;
-    margin-bottom: 20px;
+.developer-info .developer-image {
+  background-image: url(../../../../assets/images/main-thumb.png);
+  background-position: center center;
+  background-size: cover;
+  width: 40%;
+  margin: 4vw;
 }
-section.video .left-content h4 em {
-    font-style: normal;
-    color: #0399FF;
+.developer-info .developer-image .sub{
+  margin-top: 300px;
 }
-
-section.video .left-content .main-button {
-  margin-top: 30px;
+.developer-info .developer-image h3{
+  position: inherit;
+  text-align: center;
+  color: var(--themcolor);
+  font-size: 3vw;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  background-color: rgba(250,250,250,0.75);
+  padding: 20px;
 }
+.development-info{
+  background-color: var(--themcolor);;
+  justify-content: center;
 
-.video-item {
-  position: relative;
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto 0;
+  border-bottom: 2px solid #0399FF;
 }
-
-@media screen and (max-width: 767px) {
-
-  section.video .left-content {
-    margin-bottom: 45px;
-  }
-
-  section.video .first-item .first-content h4,
-  section.video .second-item .second-content h4 {
-    text-align: center;
-  }
-
+.development-info .why-header{
+  text-align: center;
+  color: #fff;
+  padding-bottom: 20px;
 }
-
-.video-item figure {
-  position: relative;
-  width: 100%;
-  font-size: 0;
+.development-info .why-header h3{
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
-.video-item figure img {
-  width: 100%;
-}
-.video-item figure a:before {
-  content: '';
-  position: absolute;
-  bottom: 10px;
-  right: 15px;
-  width: 60px;
-  height: 60px;
-  margin-top: -32.5px;
-  margin-left: -32.5px;
-  border-radius: 50%;
-  background-color: #0399FF;
-  z-index: 10;
-}
-.video-item figure a:after {
-  content: '';
-  position: absolute;
-  bottom: 27.5px;
-  right: 20px;
-  margin-top: -12.5px;
-  margin-left: -7px;
-  border: 13px solid transparent;
-  border-left: 20px #fff;
-  z-index: 10;
-}
-.video-item figure a:hover:before {
-  background-color: #0399FF;
-}
-
-.video-item .video-caption {
-    position: absolute;
-    z-index: 10;
-    background-color: rgba(250,250,250,0.75);
-    height: 80px;
-    width: 100%;
-    padding: 27px 30px;
-    bottom: 0;
-}
-
-.video-item .video-caption h4 {
-    font-size: 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 1px;
-}
-
-
-/* Contact */
-
-section.contact {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #1f2d49;
-    padding-bottom: 100px;
-}
-
-
-section.contact form {
-    background-color: rgba(250,250,250,0.1);
-    padding: 30px;
-    width: 100%;
-}
-
-
-@media screen and (max-width: 767px) {
-  section.contact form {
-      margin-bottom: 30px;
-  }
-}
-
-section.contact form input {
-    width: 100%;
-    height: 40px;
-    background-color: rgba(250,250,250,0.1);
-    border-radius: 0;
-    border: none;
-    outline: none;
-    color: #fff;
-    font-size: 13px;
-    margin-bottom: 30px;
-    letter-spacing: 0.5px;
-}
-
-section.contact form textarea {
-    width: 100%;
-    height: 220px;
-    max-height: 280px;
-    min-height: 220px;
-    background-color: rgba(250,250,250,0.1);
-    border-radius: 0;
-    border: none;
-    outline: none;
-    color: #fff;
-    font-size: 13px;
-    margin-bottom: 30px;
-    letter-spacing: 0.5px;
-
-}
-
-section.contact form input:focus,
-section.contact form textarea:focus {
-    outline: none;
-    border: none;
-    box-shadow: none;
-    color: #fff;
-    background-color: rgba(250,250,250,0.1);
-}
-
-section.contact form::placeholder { color: #fff }
-section.contact form input::placeholder { color: #fff; }
-section.contact form input::placeholder { color: #fff; }
-
-section.contact form::placeholder { color: #fff }
-section.contact form textarea::placeholder { color: #fff; }
-section.contact form textarea::placeholder { color: #fff; }
-
-section.contact form button {
-    background-color: #0399FF;
-    color: #fff;
-    font-size: 13px;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    font-weight: 700;
-    padding: 12px 20px;
-    display: inline-block;
-    outline: none;
-    box-shadow: none;
-    border: none;
-}
-
-
-@media screen and (max-width: 992px) {
-  .features { background-color: #0c1228; }
-  .features-content { position: relative; }
-  .features-post { border-left: 0 }
-}
-
-
-@media screen and (max-width: 950px) and (max-height: 400px) {
-  nav[role="navigation"].active {
-    max-height: calc(80px + 100vh);
-    overflow-y: auto;
-  }
+.development-info .why-header h5{
+  font-size: 16px;
 }
