add download documentation button in home page, add see demo script button on exam hall

--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.css
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.css
@@ -198,3 +198,12 @@ a {
   }
 
 }
+.download{
+  outline: none;
+  border: none;
+  background: #FFBF00;
+  padding: 7px;
+  font-family: 'Roboto', serif;
+  font-size: 16px;
+  font-weight: 500;
+}
