--- a/src/app/all-component/student/exam-hall/exam-hall.component.html
+++ b/src/app/all-component/student/exam-hall/exam-hall.component.html
@@ -15,5 +15,5 @@
     </div>
   </div>
 </div>
-<button class = "download" (click)="navigateDemo()">SEE DEMO SCRIPT</button>
+<button class = "demo-button" (click)="navigateDemo()">SEE DEMO SCRIPT</button>
 
