--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -103,7 +103,7 @@
               <div>
                 <a href="" target="_blank" rel="noopener noreferrer">Tawhid Hassan</a>
                 <h5>Student at Department of CSE, SEU<br>Competitive Programmer</h5>
-                <h5>Contribution: Backend Database Query 30%</h5>
+                <h5>Contribution: Backend Database Query 25%</h5>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
       <div class="why-header">
         <em class="hl"></em>
         <div class="question">
-          <h2>Technical Imformation About Online Exam Management System</h2>
+          <h2>Technical Information About Online Exam Management System</h2>
         </div>
         <h3>Development Language:</h3>
         <br>
@@ -135,7 +135,7 @@
         <h5>Databases:</h5>
         <p>MYSQL</p>
         <h2>--------Contact Info--------</h2>
-        <h5>binda.nabendu@gmail.com<br>me.sourav.das@gmail.com</h5>
+        <h5>binda.nabendu@gmail.com<br>me.dass.sourav@gmail.com</h5>
       </div>
     </section>
   </div>
