--- a/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -81,3 +81,5 @@
   <img src="assets/images/hamburger.svg" alt="<" class= "{{sidebarOpened ? 'show-damburger damburger': ' damburger'}}" (click)="toggleSidebar()">
 
 </div>
+
+<img class="img-responsive-warning" src = "assets/images/warning.png" alt="">
