--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 *{
   scroll-behavior: smooth;
 }
-
+.img-responsive-warning{
+  position: fixed;
+  width: 200px;
+  height: auto;
+  bottom: 60px;
+  right: 60px;
+  transform: rotate(-30deg);
+}
 /* Footer */
 footer {
   background-color: #152036;
