--- a/src/app/all-component/public/login/login.component.html
+++ b/src/app/all-component/public/login/login.component.html
@@ -13,10 +13,26 @@
       </mat-form-field>
       <button mat-raised-button color="primary" type='submit' style="margin: 5px;">Log in</button>
       <button mat-raised-button color="accent" (click)="goToRegPage()">Register</button>
-
-
-
     </form>
   </mat-card-content>
 </mat-card>
+<div class = "temp-info">
+  <div class = "info">
+    <h2>For Checking Admin mode </h2>
+    <h4>UserName:6118194069</h4>
+    <h4>Password:7382</h4>
+  </div>
+
+  <div class = "info">
+    <h2>For Checking Teacher mode </h2>
+    <h4>UserName:6118194065</h4>
+    <h4>Password:7382</h4>
+  </div>
+
+  <div class = "info">
+    <h2>For Checking Student mode </h2>
+    <h4>UserName:6118194051</h4>
+    <h4>Password:2345</h4>
+  </div>
+</div>
 </body>
